# claude-continue

./: .coverage  .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  TODO.md  claude-continue.sh  llms.txt  pyproject.toml  t2.sh
.github/workflows/: ci.yml  release.yml
docs/audits/: audit-2026-06-22.md
packaging/: build-macos.sh  build-windows.ps1  claude_continue_app.py
src/claude_continue/: __init__.py  action.py  ccusage.py  cli.py  config.py  doctor.py  gui.py  iterm.py  launchd.py  lock.py  log.py  model.py  osenv.py  schedule.py  scheduler.py  selfremove.py  tasksched.py  tmux.py  update.py  watch.py  winshortcut.py  winterm.py
templates/: com.mikko.claude-continue.plist.tmpl
tests/: _support.py  test_action.py  test_ccusage.py  test_cli.py  test_config.py  test_doctor.py  test_gui.py  test_iterm.py  test_launchd.py  test_lock.py  test_model.py  test_osenv.py  test_schedule.py  test_scheduler.py  test_selfremove.py  test_tasksched.py  test_tmux.py  test_update.py  test_watch.py  test_winshortcut.py  test_winterm.py
tests/fixtures/: active.json  recent.json
